Start on new GBS crawler / define book names
https://github.com/bibledit/cloud/issues/651

--- a/Makefile.am
+++ b/Makefile.am
@@ -547,7 +547,8 @@ unittest_SOURCES = \
   unittests/merge.cpp \
   unittests/nmt.cpp \
   unittests/html2format.cpp \
-  unittests/studylight.cpp
+  unittests/studylight.cpp \
+  unittests/gbs.cpp
 
 unittest_LDADD = libbibledit.a
 
