--- a/Makefile.in
+++ b/Makefile.in
@@ -343,7 +343,7 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	resource/comparative9edit.$(OBJEXT) \
 	resource/comparative1edit.$(OBJEXT) developer/delay.$(OBJEXT) \
 	images/index.$(OBJEXT) images/view.$(OBJEXT) \
-	database/bibleimages.$(OBJEXT)
+	images/fetch.$(OBJEXT) database/bibleimages.$(OBJEXT)
 libbibledit_a_OBJECTS = $(am_libbibledit_a_OBJECTS)
 am_generate_OBJECTS = executable/generate.$(OBJEXT) \
 	sources/styles.$(OBJEXT)
@@ -517,38 +517,38 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	filter/$(DEPDIR)/usfm.Po filter/$(DEPDIR)/webview.Po \
 	flate/$(DEPDIR)/flate.Po fonts/$(DEPDIR)/logic.Po \
 	help/$(DEPDIR)/index.Po html/$(DEPDIR)/header.Po \
-	html/$(DEPDIR)/text.Po images/$(DEPDIR)/index.Po \
-	images/$(DEPDIR)/view.Po index/$(DEPDIR)/index.Po \
-	index/$(DEPDIR)/listing.Po ipc/$(DEPDIR)/focus.Po \
-	ipc/$(DEPDIR)/notes.Po jobs/$(DEPDIR)/index.Po \
-	journal/$(DEPDIR)/index.Po journal/$(DEPDIR)/logic.Po \
-	jsonxx/$(DEPDIR)/jsonxx.Po ldap/$(DEPDIR)/logic.Po \
-	lexicon/$(DEPDIR)/definition.Po lexicon/$(DEPDIR)/logic.Po \
-	library/$(DEPDIR)/bibledit.Po library/$(DEPDIR)/locks.Po \
-	locale/$(DEPDIR)/logic.Po locale/$(DEPDIR)/translate.Po \
-	manage/$(DEPDIR)/accounts.Po manage/$(DEPDIR)/exports.Po \
-	manage/$(DEPDIR)/hyphenate.Po manage/$(DEPDIR)/hyphenation.Po \
-	manage/$(DEPDIR)/index.Po manage/$(DEPDIR)/privileges.Po \
-	manage/$(DEPDIR)/users.Po manage/$(DEPDIR)/write.Po \
-	mapping/$(DEPDIR)/index.Po mapping/$(DEPDIR)/map.Po \
-	mbedtls/$(DEPDIR)/aes.Po mbedtls/$(DEPDIR)/aesni.Po \
-	mbedtls/$(DEPDIR)/arc4.Po mbedtls/$(DEPDIR)/asn1parse.Po \
-	mbedtls/$(DEPDIR)/asn1write.Po mbedtls/$(DEPDIR)/base64.Po \
-	mbedtls/$(DEPDIR)/bignum.Po mbedtls/$(DEPDIR)/blowfish.Po \
-	mbedtls/$(DEPDIR)/camellia.Po mbedtls/$(DEPDIR)/ccm.Po \
-	mbedtls/$(DEPDIR)/certs.Po mbedtls/$(DEPDIR)/chacha20.Po \
-	mbedtls/$(DEPDIR)/chachapoly.Po mbedtls/$(DEPDIR)/cipher.Po \
-	mbedtls/$(DEPDIR)/cipher_wrap.Po mbedtls/$(DEPDIR)/ctr_drbg.Po \
-	mbedtls/$(DEPDIR)/debug.Po mbedtls/$(DEPDIR)/des.Po \
-	mbedtls/$(DEPDIR)/dhm.Po mbedtls/$(DEPDIR)/ecdh.Po \
-	mbedtls/$(DEPDIR)/ecdsa.Po mbedtls/$(DEPDIR)/ecjpake.Po \
-	mbedtls/$(DEPDIR)/ecp.Po mbedtls/$(DEPDIR)/ecp_curves.Po \
-	mbedtls/$(DEPDIR)/entropy.Po mbedtls/$(DEPDIR)/entropy_poll.Po \
-	mbedtls/$(DEPDIR)/error.Po mbedtls/$(DEPDIR)/gcm.Po \
-	mbedtls/$(DEPDIR)/havege.Po mbedtls/$(DEPDIR)/hmac_drbg.Po \
-	mbedtls/$(DEPDIR)/md.Po mbedtls/$(DEPDIR)/md2.Po \
-	mbedtls/$(DEPDIR)/md4.Po mbedtls/$(DEPDIR)/md5.Po \
-	mbedtls/$(DEPDIR)/md_wrap.Po \
+	html/$(DEPDIR)/text.Po images/$(DEPDIR)/fetch.Po \
+	images/$(DEPDIR)/index.Po images/$(DEPDIR)/view.Po \
+	index/$(DEPDIR)/index.Po index/$(DEPDIR)/listing.Po \
+	ipc/$(DEPDIR)/focus.Po ipc/$(DEPDIR)/notes.Po \
+	jobs/$(DEPDIR)/index.Po journal/$(DEPDIR)/index.Po \
+	journal/$(DEPDIR)/logic.Po jsonxx/$(DEPDIR)/jsonxx.Po \
+	ldap/$(DEPDIR)/logic.Po lexicon/$(DEPDIR)/definition.Po \
+	lexicon/$(DEPDIR)/logic.Po library/$(DEPDIR)/bibledit.Po \
+	library/$(DEPDIR)/locks.Po locale/$(DEPDIR)/logic.Po \
+	locale/$(DEPDIR)/translate.Po manage/$(DEPDIR)/accounts.Po \
+	manage/$(DEPDIR)/exports.Po manage/$(DEPDIR)/hyphenate.Po \
+	manage/$(DEPDIR)/hyphenation.Po manage/$(DEPDIR)/index.Po \
+	manage/$(DEPDIR)/privileges.Po manage/$(DEPDIR)/users.Po \
+	manage/$(DEPDIR)/write.Po mapping/$(DEPDIR)/index.Po \
+	mapping/$(DEPDIR)/map.Po mbedtls/$(DEPDIR)/aes.Po \
+	mbedtls/$(DEPDIR)/aesni.Po mbedtls/$(DEPDIR)/arc4.Po \
+	mbedtls/$(DEPDIR)/asn1parse.Po mbedtls/$(DEPDIR)/asn1write.Po \
+	mbedtls/$(DEPDIR)/base64.Po mbedtls/$(DEPDIR)/bignum.Po \
+	mbedtls/$(DEPDIR)/blowfish.Po mbedtls/$(DEPDIR)/camellia.Po \
+	mbedtls/$(DEPDIR)/ccm.Po mbedtls/$(DEPDIR)/certs.Po \
+	mbedtls/$(DEPDIR)/chacha20.Po mbedtls/$(DEPDIR)/chachapoly.Po \
+	mbedtls/$(DEPDIR)/cipher.Po mbedtls/$(DEPDIR)/cipher_wrap.Po \
+	mbedtls/$(DEPDIR)/ctr_drbg.Po mbedtls/$(DEPDIR)/debug.Po \
+	mbedtls/$(DEPDIR)/des.Po mbedtls/$(DEPDIR)/dhm.Po \
+	mbedtls/$(DEPDIR)/ecdh.Po mbedtls/$(DEPDIR)/ecdsa.Po \
+	mbedtls/$(DEPDIR)/ecjpake.Po mbedtls/$(DEPDIR)/ecp.Po \
+	mbedtls/$(DEPDIR)/ecp_curves.Po mbedtls/$(DEPDIR)/entropy.Po \
+	mbedtls/$(DEPDIR)/entropy_poll.Po mbedtls/$(DEPDIR)/error.Po \
+	mbedtls/$(DEPDIR)/gcm.Po mbedtls/$(DEPDIR)/havege.Po \
+	mbedtls/$(DEPDIR)/hmac_drbg.Po mbedtls/$(DEPDIR)/md.Po \
+	mbedtls/$(DEPDIR)/md2.Po mbedtls/$(DEPDIR)/md4.Po \
+	mbedtls/$(DEPDIR)/md5.Po mbedtls/$(DEPDIR)/md_wrap.Po \
 	mbedtls/$(DEPDIR)/memory_buffer_alloc.Po \
 	mbedtls/$(DEPDIR)/net_sockets.Po mbedtls/$(DEPDIR)/oid.Po \
 	mbedtls/$(DEPDIR)/padlock.Po mbedtls/$(DEPDIR)/pem.Po \
@@ -1403,6 +1403,7 @@ libbibledit_a_SOURCES = \
   developer/delay.cpp \
   images/index.cpp \
   images/view.cpp \
+  images/fetch.cpp \
   database/bibleimages.cpp
 
 server_SOURCES = executable/bibledit.cpp
@@ -3034,6 +3035,8 @@ images/index.$(OBJEXT): images/$(am__dirstamp) \
 	images/$(DEPDIR)/$(am__dirstamp)
 images/view.$(OBJEXT): images/$(am__dirstamp) \
 	images/$(DEPDIR)/$(am__dirstamp)
+images/fetch.$(OBJEXT): images/$(am__dirstamp) \
+	images/$(DEPDIR)/$(am__dirstamp)
 database/bibleimages.$(OBJEXT): database/$(am__dirstamp) \
 	database/$(DEPDIR)/$(am__dirstamp)
 
@@ -3519,6 +3522,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@help/$(DEPDIR)/index.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@html/$(DEPDIR)/header.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@html/$(DEPDIR)/text.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@images/$(DEPDIR)/fetch.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@images/$(DEPDIR)/index.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@images/$(DEPDIR)/view.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@index/$(DEPDIR)/index.Po@am__quote@ # am--include-marker
@@ -4605,6 +4609,7 @@ distclean: distclean-am
 	-rm -f help/$(DEPDIR)/index.Po
 	-rm -f html/$(DEPDIR)/header.Po
 	-rm -f html/$(DEPDIR)/text.Po
+	-rm -f images/$(DEPDIR)/fetch.Po
 	-rm -f images/$(DEPDIR)/index.Po
 	-rm -f images/$(DEPDIR)/view.Po
 	-rm -f index/$(DEPDIR)/index.Po
@@ -5200,6 +5205,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f help/$(DEPDIR)/index.Po
 	-rm -f html/$(DEPDIR)/header.Po
 	-rm -f html/$(DEPDIR)/text.Po
+	-rm -f images/$(DEPDIR)/fetch.Po
 	-rm -f images/$(DEPDIR)/index.Po
 	-rm -f images/$(DEPDIR)/view.Po
 	-rm -f index/$(DEPDIR)/index.Po
