Image library and filter
https://github.com/bibledit/cloud/issues/669

--- a/Makefile.in
+++ b/Makefile.in
@@ -344,7 +344,7 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	resource/comparative1edit.$(OBJEXT) developer/delay.$(OBJEXT) \
 	images/index.$(OBJEXT) images/view.$(OBJEXT) \
 	images/fetch.$(OBJEXT) images/logic.$(OBJEXT) \
-	database/bibleimages.$(OBJEXT)
+	database/bibleimages.$(OBJEXT) filter/image.$(OBJEXT)
 libbibledit_a_OBJECTS = $(am_libbibledit_a_OBJECTS)
 am_generate_OBJECTS = executable/generate.$(OBJEXT) \
 	sources/styles.$(OBJEXT)
@@ -509,48 +509,48 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	export/$(DEPDIR)/web.Po filter/$(DEPDIR)/archive.Po \
 	filter/$(DEPDIR)/css.Po filter/$(DEPDIR)/date.Po \
 	filter/$(DEPDIR)/diff.Po filter/$(DEPDIR)/git.Po \
-	filter/$(DEPDIR)/html.Po filter/$(DEPDIR)/indonesian.Po \
-	filter/$(DEPDIR)/mail.Po filter/$(DEPDIR)/md5.Po \
-	filter/$(DEPDIR)/memory.Po filter/$(DEPDIR)/merge.Po \
-	filter/$(DEPDIR)/passage.Po filter/$(DEPDIR)/roles.Po \
-	filter/$(DEPDIR)/shell.Po filter/$(DEPDIR)/string.Po \
-	filter/$(DEPDIR)/text.Po filter/$(DEPDIR)/url.Po \
-	filter/$(DEPDIR)/usfm.Po filter/$(DEPDIR)/webview.Po \
-	flate/$(DEPDIR)/flate.Po fonts/$(DEPDIR)/logic.Po \
-	help/$(DEPDIR)/index.Po html/$(DEPDIR)/header.Po \
-	html/$(DEPDIR)/text.Po images/$(DEPDIR)/fetch.Po \
-	images/$(DEPDIR)/index.Po images/$(DEPDIR)/logic.Po \
-	images/$(DEPDIR)/view.Po index/$(DEPDIR)/index.Po \
-	index/$(DEPDIR)/listing.Po ipc/$(DEPDIR)/focus.Po \
-	ipc/$(DEPDIR)/notes.Po jobs/$(DEPDIR)/index.Po \
-	journal/$(DEPDIR)/index.Po journal/$(DEPDIR)/logic.Po \
-	jsonxx/$(DEPDIR)/jsonxx.Po ldap/$(DEPDIR)/logic.Po \
-	lexicon/$(DEPDIR)/definition.Po lexicon/$(DEPDIR)/logic.Po \
-	library/$(DEPDIR)/bibledit.Po library/$(DEPDIR)/locks.Po \
-	locale/$(DEPDIR)/logic.Po locale/$(DEPDIR)/translate.Po \
-	manage/$(DEPDIR)/accounts.Po manage/$(DEPDIR)/exports.Po \
-	manage/$(DEPDIR)/hyphenate.Po manage/$(DEPDIR)/hyphenation.Po \
-	manage/$(DEPDIR)/index.Po manage/$(DEPDIR)/privileges.Po \
-	manage/$(DEPDIR)/users.Po manage/$(DEPDIR)/write.Po \
-	mapping/$(DEPDIR)/index.Po mapping/$(DEPDIR)/map.Po \
-	mbedtls/$(DEPDIR)/aes.Po mbedtls/$(DEPDIR)/aesni.Po \
-	mbedtls/$(DEPDIR)/arc4.Po mbedtls/$(DEPDIR)/asn1parse.Po \
-	mbedtls/$(DEPDIR)/asn1write.Po mbedtls/$(DEPDIR)/base64.Po \
-	mbedtls/$(DEPDIR)/bignum.Po mbedtls/$(DEPDIR)/blowfish.Po \
-	mbedtls/$(DEPDIR)/camellia.Po mbedtls/$(DEPDIR)/ccm.Po \
-	mbedtls/$(DEPDIR)/certs.Po mbedtls/$(DEPDIR)/chacha20.Po \
-	mbedtls/$(DEPDIR)/chachapoly.Po mbedtls/$(DEPDIR)/cipher.Po \
-	mbedtls/$(DEPDIR)/cipher_wrap.Po mbedtls/$(DEPDIR)/ctr_drbg.Po \
-	mbedtls/$(DEPDIR)/debug.Po mbedtls/$(DEPDIR)/des.Po \
-	mbedtls/$(DEPDIR)/dhm.Po mbedtls/$(DEPDIR)/ecdh.Po \
-	mbedtls/$(DEPDIR)/ecdsa.Po mbedtls/$(DEPDIR)/ecjpake.Po \
-	mbedtls/$(DEPDIR)/ecp.Po mbedtls/$(DEPDIR)/ecp_curves.Po \
-	mbedtls/$(DEPDIR)/entropy.Po mbedtls/$(DEPDIR)/entropy_poll.Po \
-	mbedtls/$(DEPDIR)/error.Po mbedtls/$(DEPDIR)/gcm.Po \
-	mbedtls/$(DEPDIR)/havege.Po mbedtls/$(DEPDIR)/hmac_drbg.Po \
-	mbedtls/$(DEPDIR)/md.Po mbedtls/$(DEPDIR)/md2.Po \
-	mbedtls/$(DEPDIR)/md4.Po mbedtls/$(DEPDIR)/md5.Po \
-	mbedtls/$(DEPDIR)/md_wrap.Po \
+	filter/$(DEPDIR)/html.Po filter/$(DEPDIR)/image.Po \
+	filter/$(DEPDIR)/indonesian.Po filter/$(DEPDIR)/mail.Po \
+	filter/$(DEPDIR)/md5.Po filter/$(DEPDIR)/memory.Po \
+	filter/$(DEPDIR)/merge.Po filter/$(DEPDIR)/passage.Po \
+	filter/$(DEPDIR)/roles.Po filter/$(DEPDIR)/shell.Po \
+	filter/$(DEPDIR)/string.Po filter/$(DEPDIR)/text.Po \
+	filter/$(DEPDIR)/url.Po filter/$(DEPDIR)/usfm.Po \
+	filter/$(DEPDIR)/webview.Po flate/$(DEPDIR)/flate.Po \
+	fonts/$(DEPDIR)/logic.Po help/$(DEPDIR)/index.Po \
+	html/$(DEPDIR)/header.Po html/$(DEPDIR)/text.Po \
+	images/$(DEPDIR)/fetch.Po images/$(DEPDIR)/index.Po \
+	images/$(DEPDIR)/logic.Po images/$(DEPDIR)/view.Po \
+	index/$(DEPDIR)/index.Po index/$(DEPDIR)/listing.Po \
+	ipc/$(DEPDIR)/focus.Po ipc/$(DEPDIR)/notes.Po \
+	jobs/$(DEPDIR)/index.Po journal/$(DEPDIR)/index.Po \
+	journal/$(DEPDIR)/logic.Po jsonxx/$(DEPDIR)/jsonxx.Po \
+	ldap/$(DEPDIR)/logic.Po lexicon/$(DEPDIR)/definition.Po \
+	lexicon/$(DEPDIR)/logic.Po library/$(DEPDIR)/bibledit.Po \
+	library/$(DEPDIR)/locks.Po locale/$(DEPDIR)/logic.Po \
+	locale/$(DEPDIR)/translate.Po manage/$(DEPDIR)/accounts.Po \
+	manage/$(DEPDIR)/exports.Po manage/$(DEPDIR)/hyphenate.Po \
+	manage/$(DEPDIR)/hyphenation.Po manage/$(DEPDIR)/index.Po \
+	manage/$(DEPDIR)/privileges.Po manage/$(DEPDIR)/users.Po \
+	manage/$(DEPDIR)/write.Po mapping/$(DEPDIR)/index.Po \
+	mapping/$(DEPDIR)/map.Po mbedtls/$(DEPDIR)/aes.Po \
+	mbedtls/$(DEPDIR)/aesni.Po mbedtls/$(DEPDIR)/arc4.Po \
+	mbedtls/$(DEPDIR)/asn1parse.Po mbedtls/$(DEPDIR)/asn1write.Po \
+	mbedtls/$(DEPDIR)/base64.Po mbedtls/$(DEPDIR)/bignum.Po \
+	mbedtls/$(DEPDIR)/blowfish.Po mbedtls/$(DEPDIR)/camellia.Po \
+	mbedtls/$(DEPDIR)/ccm.Po mbedtls/$(DEPDIR)/certs.Po \
+	mbedtls/$(DEPDIR)/chacha20.Po mbedtls/$(DEPDIR)/chachapoly.Po \
+	mbedtls/$(DEPDIR)/cipher.Po mbedtls/$(DEPDIR)/cipher_wrap.Po \
+	mbedtls/$(DEPDIR)/ctr_drbg.Po mbedtls/$(DEPDIR)/debug.Po \
+	mbedtls/$(DEPDIR)/des.Po mbedtls/$(DEPDIR)/dhm.Po \
+	mbedtls/$(DEPDIR)/ecdh.Po mbedtls/$(DEPDIR)/ecdsa.Po \
+	mbedtls/$(DEPDIR)/ecjpake.Po mbedtls/$(DEPDIR)/ecp.Po \
+	mbedtls/$(DEPDIR)/ecp_curves.Po mbedtls/$(DEPDIR)/entropy.Po \
+	mbedtls/$(DEPDIR)/entropy_poll.Po mbedtls/$(DEPDIR)/error.Po \
+	mbedtls/$(DEPDIR)/gcm.Po mbedtls/$(DEPDIR)/havege.Po \
+	mbedtls/$(DEPDIR)/hmac_drbg.Po mbedtls/$(DEPDIR)/md.Po \
+	mbedtls/$(DEPDIR)/md2.Po mbedtls/$(DEPDIR)/md4.Po \
+	mbedtls/$(DEPDIR)/md5.Po mbedtls/$(DEPDIR)/md_wrap.Po \
 	mbedtls/$(DEPDIR)/memory_buffer_alloc.Po \
 	mbedtls/$(DEPDIR)/net_sockets.Po mbedtls/$(DEPDIR)/oid.Po \
 	mbedtls/$(DEPDIR)/padlock.Po mbedtls/$(DEPDIR)/pem.Po \
@@ -1407,7 +1407,8 @@ libbibledit_a_SOURCES = \
   images/view.cpp \
   images/fetch.cpp \
   images/logic.cpp \
-  database/bibleimages.cpp
+  database/bibleimages.cpp \
+  filter/image.cpp
 
 server_SOURCES = executable/bibledit.cpp
 server_LDADD = libbibledit.a
@@ -3044,6 +3045,8 @@ images/logic.$(OBJEXT): images/$(am__dirstamp) \
 	images/$(DEPDIR)/$(am__dirstamp)
 database/bibleimages.$(OBJEXT): database/$(am__dirstamp) \
 	database/$(DEPDIR)/$(am__dirstamp)
+filter/image.$(OBJEXT): filter/$(am__dirstamp) \
+	filter/$(DEPDIR)/$(am__dirstamp)
 
 libbibledit.a: $(libbibledit_a_OBJECTS) $(libbibledit_a_DEPENDENCIES) $(EXTRA_libbibledit_a_DEPENDENCIES) 
 	$(AM_V_at)-rm -f libbibledit.a
@@ -3509,6 +3512,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/diff.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/git.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/html.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/image.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/indonesian.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/mail.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/md5.Po@am__quote@ # am--include-marker
@@ -4597,6 +4601,7 @@ distclean: distclean-am
 	-rm -f filter/$(DEPDIR)/diff.Po
 	-rm -f filter/$(DEPDIR)/git.Po
 	-rm -f filter/$(DEPDIR)/html.Po
+	-rm -f filter/$(DEPDIR)/image.Po
 	-rm -f filter/$(DEPDIR)/indonesian.Po
 	-rm -f filter/$(DEPDIR)/mail.Po
 	-rm -f filter/$(DEPDIR)/md5.Po
@@ -5194,6 +5199,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f filter/$(DEPDIR)/diff.Po
 	-rm -f filter/$(DEPDIR)/git.Po
 	-rm -f filter/$(DEPDIR)/html.Po
+	-rm -f filter/$(DEPDIR)/image.Po
 	-rm -f filter/$(DEPDIR)/indonesian.Po
 	-rm -f filter/$(DEPDIR)/mail.Po
 	-rm -f filter/$(DEPDIR)/md5.Po
