First version of extractor from easy english bible
https://github.com/bibledit/cloud/issues/696

--- a/Makefile.am
+++ b/Makefile.am
@@ -556,7 +556,8 @@ unittest_SOURCES = \
   unittests/studylight.cpp \
   unittests/gbs.cpp \
   unittests/bibleimages.cpp \
-  unittests/image.cpp
+  unittests/image.cpp \
+  unittests/easyenglishbible.cpp
 
 unittest_LDADD = libbibledit.a
 
