Move C++11 compiler support to configure.ac
https://github.com/bibledit/cloud/issues/719

--- a/Makefile.am
+++ b/Makefile.am
@@ -570,7 +570,7 @@ generate_LDADD = libbibledit.a
 AM_CFLAGS = -Wall -Wextra -pedantic -g
 AM_CFLAGS += $(OPENSSL_CFLAGS)
 
-AM_CXXFLAGS = -Wall -Wextra -pedantic -std=c++11 -fno-var-tracking -g
+AM_CXXFLAGS = -Wall -Wextra -pedantic -fno-var-tracking -g
 AM_CXXFLAGS += $(CURL_CFLAGS)
 AM_CXXFLAGS += $(OPENSSL_CFLAGS)
 AM_CXXFLAGS += $(GTK_CFLAGS)
